--- a/style.css
+++ b/style.css
@@ -136,3 +136,12 @@ span {
     align-items: center;
 }
 }
+@media (max-width: 350px) {
+
+  .contents {
+      display: flex;
+      margin-bottom: 1.5625rem;
+      flex-direction: column;
+      align-items: center;
+  }
+  }
