--- a/style.css
+++ b/style.css
@@ -141,7 +141,15 @@ span {
   .contents {
       display: flex;
       margin-bottom: 1.5625rem;
-      flex-direction: column;
       align-items: center;
   }
+
+  .contents p {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      margin-right: 1.125rem;
+    
+  }
+  
   }
